fix scores on mobile view
fix height so that text would be cut from below

hide screen reader text on mobile

hide screen reader text and align bullet

--- a/css/src/edit-page.css
+++ b/css/src/edit-page.css
@@ -1,4 +1,15 @@
 /* The styles for the overview page for posts or terms. */
 @import url(../src/score_icon.css);
 
+@media screen and (max-width: 782px) {
+	.wpseo-score-icon{
+		margin-right: 0;
+		margin-left: 0!important;
+	}
+	
+	.wpseo-score-icon .wpseo-score-text {
+		display: none;
+	}
+}
+
 /*# sourceMappingURL=edit-page.css.map */
